// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SortBy should render sort by component 1`] = `
<SortBy
  id="mySortBy"
  options={
    Array [
      Object {
        "key": "firstName",
        "label": "First Name",
      },
      Object {
        "key": "lastName",
        "label": "Last Name",
      },
    ]
  }
  value={Object {}}
>
  <NavbarText
    componentClass="p"
    pullLeft={false}
    pullRight={false}
  >
    <p
      className="navbar-text"
    >
      <label
        htmlFor="mySortBy"
      >
        Sort by:
      </label>
    </p>
  </NavbarText>
  <Nav
    bsClass="nav"
    justified={false}
    pullLeft={false}
    pullRight={false}
    stacked={false}
  >
    <ul
      className="nav"
      role={null}
    >
      <NavDropdown
        aria-label="Change sorting option. Current sorting: N.C."
        id="mySortBy"
        key=".0"
        onSelect={[Function]}
        title="N.C"
      >
        <Uncontrolled(Dropdown)
          className=""
          componentClass="li"
          id="mySortBy"
          onSelect={[Function]}
        >
          <Dropdown
            bsClass="dropdown"
            className=""
            componentClass="li"
            id="mySortBy"
            onSelect={[Function]}
            onToggle={[Function]}
          >
            <li
              className="dropdown"
            >
              <DropdownToggle
                aria-label="Change sorting option. Current sorting: N.C."
                bsClass="dropdown-toggle"
                bsRole="toggle"
                id="mySortBy"
                key=".0"
                onClick={[Function]}
                onKeyDown={[Function]}
                open={false}
                useAnchor={true}
              >
                <SafeAnchor
                  aria-expanded={false}
                  aria-haspopup={true}
                  aria-label="Change sorting option. Current sorting: N.C."
                  className="dropdown-toggle"
                  componentClass="a"
                  id="mySortBy"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                >
                  <a
                    aria-expanded={false}
                    aria-haspopup={true}
                    aria-label="Change sorting option. Current sorting: N.C."
                    className="dropdown-toggle"
                    href="#"
                    id="mySortBy"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="button"
                  >
                    N.C
                     
                    <span
                      className="caret"
                    />
                  </a>
                </SafeAnchor>
              </DropdownToggle>
              <DropdownMenu
                bsClass="dropdown-menu"
                bsRole="menu"
                key=".1"
                labelledBy="mySortBy"
                onClose={[Function]}
                onSelect={[Function]}
                pullRight={false}
              >
                <RootCloseWrapper
                  disabled={true}
                  event="click"
                  onRootClose={[Function]}
                >
                  <ul
                    aria-labelledby="mySortBy"
                    className="dropdown-menu"
                    role="menu"
                  >
                    <MenuItem
                      aria-label="First Name"
                      bsClass="dropdown"
                      disabled={false}
                      divider={false}
                      eventKey="firstName"
                      header={false}
                      id="mySortBy-firstName"
                      key=".$.$firstName"
                      onKeyDown={[Function]}
                      onSelect={[Function]}
                    >
                      <li
                        className=""
                        role="presentation"
                      >
                        <SafeAnchor
                          aria-label="First Name"
                          componentClass="a"
                          id="mySortBy-firstName"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          role="menuitem"
                          tabIndex="-1"
                        >
                          <a
                            aria-label="First Name"
                            href="#"
                            id="mySortBy-firstName"
                            onClick={[Function]}
                            onKeyDown={[Function]}
                            role="menuitem"
                            tabIndex="-1"
                          >
                            First Name
                          </a>
                        </SafeAnchor>
                      </li>
                    </MenuItem>
                    <MenuItem
                      aria-label="Last Name"
                      bsClass="dropdown"
                      disabled={false}
                      divider={false}
                      eventKey="lastName"
                      header={false}
                      id="mySortBy-lastName"
                      key=".$.$lastName"
                      onKeyDown={[Function]}
                      onSelect={[Function]}
                    >
                      <li
                        className=""
                        role="presentation"
                      >
                        <SafeAnchor
                          aria-label="Last Name"
                          componentClass="a"
                          id="mySortBy-lastName"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          role="menuitem"
                          tabIndex="-1"
                        >
                          <a
                            aria-label="Last Name"
                            href="#"
                            id="mySortBy-lastName"
                            onClick={[Function]}
                            onKeyDown={[Function]}
                            role="menuitem"
                            tabIndex="-1"
                          >
                            Last Name
                          </a>
                        </SafeAnchor>
                      </li>
                    </MenuItem>
                  </ul>
                </RootCloseWrapper>
              </DropdownMenu>
            </li>
          </Dropdown>
        </Uncontrolled(Dropdown)>
      </NavDropdown>
      <NavItem
        active={false}
        aria-label="Change sort order. Current order: Ascending."
        disabled={false}
        id="mySortBy-order"
        key=".1"
        onClick={[Function]}
        onSelect={null}
      >
        <li
          className=""
          role="presentation"
        >
          <SafeAnchor
            aria-label="Change sort order. Current order: Ascending."
            componentClass="a"
            disabled={false}
            id="mySortBy-order"
            onClick={[Function]}
          >
            <a
              aria-label="Change sort order. Current order: Ascending."
              href="#"
              id="mySortBy-order"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              Ascending
            </a>
          </SafeAnchor>
        </li>
      </NavItem>
    </ul>
  </Nav>
</SortBy>
`;

exports[`SortBy should render sort by component with sorting parameter from context 1`] = `
<SortBy
  id="mySortBy"
  options={
    Array [
      Object {
        "key": "firstName",
        "label": "First Name",
      },
      Object {
        "key": "lastName",
        "label": "Last Name",
      },
    ]
  }
  value={Object {}}
>
  <NavbarText
    componentClass="p"
    pullLeft={false}
    pullRight={false}
  >
    <p
      className="navbar-text"
    >
      <label
        htmlFor="mySortBy"
      >
        Sort by:
      </label>
    </p>
  </NavbarText>
  <Nav
    bsClass="nav"
    justified={false}
    pullLeft={false}
    pullRight={false}
    stacked={false}
  >
    <ul
      className="nav"
      role={null}
    >
      <NavDropdown
        aria-label="Change sorting option. Current sorting: First Name."
        id="mySortBy"
        key=".0"
        onSelect={[Function]}
        title="First Name"
      >
        <Uncontrolled(Dropdown)
          className=""
          componentClass="li"
          id="mySortBy"
          onSelect={[Function]}
        >
          <Dropdown
            bsClass="dropdown"
            className=""
            componentClass="li"
            id="mySortBy"
            onSelect={[Function]}
            onToggle={[Function]}
          >
            <li
              className="dropdown"
            >
              <DropdownToggle
                aria-label="Change sorting option. Current sorting: First Name."
                bsClass="dropdown-toggle"
                bsRole="toggle"
                id="mySortBy"
                key=".0"
                onClick={[Function]}
                onKeyDown={[Function]}
                open={false}
                useAnchor={true}
              >
                <SafeAnchor
                  aria-expanded={false}
                  aria-haspopup={true}
                  aria-label="Change sorting option. Current sorting: First Name."
                  className="dropdown-toggle"
                  componentClass="a"
                  id="mySortBy"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                >
                  <a
                    aria-expanded={false}
                    aria-haspopup={true}
                    aria-label="Change sorting option. Current sorting: First Name."
                    className="dropdown-toggle"
                    href="#"
                    id="mySortBy"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="button"
                  >
                    First Name
                     
                    <span
                      className="caret"
                    />
                  </a>
                </SafeAnchor>
              </DropdownToggle>
              <DropdownMenu
                bsClass="dropdown-menu"
                bsRole="menu"
                key=".1"
                labelledBy="mySortBy"
                onClose={[Function]}
                onSelect={[Function]}
                pullRight={false}
              >
                <RootCloseWrapper
                  disabled={true}
                  event="click"
                  onRootClose={[Function]}
                >
                  <ul
                    aria-labelledby="mySortBy"
                    className="dropdown-menu"
                    role="menu"
                  >
                    <MenuItem
                      aria-label="First Name"
                      bsClass="dropdown"
                      disabled={false}
                      divider={false}
                      eventKey="firstName"
                      header={false}
                      id="mySortBy-firstName"
                      key=".$.$firstName"
                      onKeyDown={[Function]}
                      onSelect={[Function]}
                    >
                      <li
                        className=""
                        role="presentation"
                      >
                        <SafeAnchor
                          aria-label="First Name"
                          componentClass="a"
                          id="mySortBy-firstName"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          role="menuitem"
                          tabIndex="-1"
                        >
                          <a
                            aria-label="First Name"
                            href="#"
                            id="mySortBy-firstName"
                            onClick={[Function]}
                            onKeyDown={[Function]}
                            role="menuitem"
                            tabIndex="-1"
                          >
                            First Name
                          </a>
                        </SafeAnchor>
                      </li>
                    </MenuItem>
                    <MenuItem
                      aria-label="Last Name"
                      bsClass="dropdown"
                      disabled={false}
                      divider={false}
                      eventKey="lastName"
                      header={false}
                      id="mySortBy-lastName"
                      key=".$.$lastName"
                      onKeyDown={[Function]}
                      onSelect={[Function]}
                    >
                      <li
                        className=""
                        role="presentation"
                      >
                        <SafeAnchor
                          aria-label="Last Name"
                          componentClass="a"
                          id="mySortBy-lastName"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          role="menuitem"
                          tabIndex="-1"
                        >
                          <a
                            aria-label="Last Name"
                            href="#"
                            id="mySortBy-lastName"
                            onClick={[Function]}
                            onKeyDown={[Function]}
                            role="menuitem"
                            tabIndex="-1"
                          >
                            Last Name
                          </a>
                        </SafeAnchor>
                      </li>
                    </MenuItem>
                  </ul>
                </RootCloseWrapper>
              </DropdownMenu>
            </li>
          </Dropdown>
        </Uncontrolled(Dropdown)>
      </NavDropdown>
      <NavItem
        active={false}
        aria-label="Change sort order. Current order: Ascending."
        disabled={false}
        id="mySortBy-order"
        key=".1"
        onClick={[Function]}
        onSelect={null}
      >
        <li
          className=""
          role="presentation"
        >
          <SafeAnchor
            aria-label="Change sort order. Current order: Ascending."
            componentClass="a"
            disabled={false}
            id="mySortBy-order"
            onClick={[Function]}
          >
            <a
              aria-label="Change sort order. Current order: Ascending."
              href="#"
              id="mySortBy-order"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              Ascending
            </a>
          </SafeAnchor>
        </li>
      </NavItem>
    </ul>
  </Nav>
</SortBy>
`;

exports[`SortBy should render sort by component with sorting parameter from props 1`] = `
<SortBy
  id="mySortBy"
  options={
    Array [
      Object {
        "key": "firstName",
        "label": "First Name",
      },
      Object {
        "key": "lastName",
        "label": "Last Name",
      },
    ]
  }
  value={
    Object {
      "isDescending": true,
      "sortBy": "lastName",
    }
  }
>
  <NavbarText
    componentClass="p"
    pullLeft={false}
    pullRight={false}
  >
    <p
      className="navbar-text"
    >
      <label
        htmlFor="mySortBy"
      >
        Sort by:
      </label>
    </p>
  </NavbarText>
  <Nav
    bsClass="nav"
    justified={false}
    pullLeft={false}
    pullRight={false}
    stacked={false}
  >
    <ul
      className="nav"
      role={null}
    >
      <NavDropdown
        aria-label="Change sorting option. Current sorting: N.C."
        id="mySortBy"
        key=".0"
        onSelect={[Function]}
        title="N.C"
      >
        <Uncontrolled(Dropdown)
          className=""
          componentClass="li"
          id="mySortBy"
          onSelect={[Function]}
        >
          <Dropdown
            bsClass="dropdown"
            className=""
            componentClass="li"
            id="mySortBy"
            onSelect={[Function]}
            onToggle={[Function]}
          >
            <li
              className="dropdown"
            >
              <DropdownToggle
                aria-label="Change sorting option. Current sorting: N.C."
                bsClass="dropdown-toggle"
                bsRole="toggle"
                id="mySortBy"
                key=".0"
                onClick={[Function]}
                onKeyDown={[Function]}
                open={false}
                useAnchor={true}
              >
                <SafeAnchor
                  aria-expanded={false}
                  aria-haspopup={true}
                  aria-label="Change sorting option. Current sorting: N.C."
                  className="dropdown-toggle"
                  componentClass="a"
                  id="mySortBy"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                >
                  <a
                    aria-expanded={false}
                    aria-haspopup={true}
                    aria-label="Change sorting option. Current sorting: N.C."
                    className="dropdown-toggle"
                    href="#"
                    id="mySortBy"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="button"
                  >
                    N.C
                     
                    <span
                      className="caret"
                    />
                  </a>
                </SafeAnchor>
              </DropdownToggle>
              <DropdownMenu
                bsClass="dropdown-menu"
                bsRole="menu"
                key=".1"
                labelledBy="mySortBy"
                onClose={[Function]}
                onSelect={[Function]}
                pullRight={false}
              >
                <RootCloseWrapper
                  disabled={true}
                  event="click"
                  onRootClose={[Function]}
                >
                  <ul
                    aria-labelledby="mySortBy"
                    className="dropdown-menu"
                    role="menu"
                  >
                    <MenuItem
                      aria-label="First Name"
                      bsClass="dropdown"
                      disabled={false}
                      divider={false}
                      eventKey="firstName"
                      header={false}
                      id="mySortBy-firstName"
                      key=".$.$firstName"
                      onKeyDown={[Function]}
                      onSelect={[Function]}
                    >
                      <li
                        className=""
                        role="presentation"
                      >
                        <SafeAnchor
                          aria-label="First Name"
                          componentClass="a"
                          id="mySortBy-firstName"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          role="menuitem"
                          tabIndex="-1"
                        >
                          <a
                            aria-label="First Name"
                            href="#"
                            id="mySortBy-firstName"
                            onClick={[Function]}
                            onKeyDown={[Function]}
                            role="menuitem"
                            tabIndex="-1"
                          >
                            First Name
                          </a>
                        </SafeAnchor>
                      </li>
                    </MenuItem>
                    <MenuItem
                      aria-label="Last Name"
                      bsClass="dropdown"
                      disabled={false}
                      divider={false}
                      eventKey="lastName"
                      header={false}
                      id="mySortBy-lastName"
                      key=".$.$lastName"
                      onKeyDown={[Function]}
                      onSelect={[Function]}
                    >
                      <li
                        className=""
                        role="presentation"
                      >
                        <SafeAnchor
                          aria-label="Last Name"
                          componentClass="a"
                          id="mySortBy-lastName"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          role="menuitem"
                          tabIndex="-1"
                        >
                          <a
                            aria-label="Last Name"
                            href="#"
                            id="mySortBy-lastName"
                            onClick={[Function]}
                            onKeyDown={[Function]}
                            role="menuitem"
                            tabIndex="-1"
                          >
                            Last Name
                          </a>
                        </SafeAnchor>
                      </li>
                    </MenuItem>
                  </ul>
                </RootCloseWrapper>
              </DropdownMenu>
            </li>
          </Dropdown>
        </Uncontrolled(Dropdown)>
      </NavDropdown>
      <NavItem
        active={false}
        aria-label="Change sort order. Current order: Ascending."
        disabled={false}
        id="mySortBy-order"
        key=".1"
        onClick={[Function]}
        onSelect={null}
      >
        <li
          className=""
          role="presentation"
        >
          <SafeAnchor
            aria-label="Change sort order. Current order: Ascending."
            componentClass="a"
            disabled={false}
            id="mySortBy-order"
            onClick={[Function]}
          >
            <a
              aria-label="Change sort order. Current order: Ascending."
              href="#"
              id="mySortBy-order"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              Ascending
            </a>
          </SafeAnchor>
        </li>
      </NavItem>
    </ul>
  </Nav>
</SortBy>
`;
